<resources>
    <string name="app_name">Decision</string>

    <string name="yes_no_title">Yes/No</string>
    <string name="yes_no_placeholder" />

    <string name="choice_title">Choice</string>
    <string name="choice_placeholder">Enter choice</string>
    <string name="choice_reset_button">Reset</string>
    <string name="choice_decide_button">Decide</string>
    <string name="choice_add_button">Add Row</string>
    <string name="choice_help_text">Enter each choice in a separate input</string>

    <string name="menu_item_yes_no">Yes/No</string>
    <string name="menu_item_choice">Choice</string>
    <string name="menu_item_rng">Number</string>
    <string name="menu_item_rsg">Number Set</string>
    <string name="menu_item_time">Time</string>

    <string name="rng_title">Number Generator</string>
    <string name="rng_generate">Generate</string>
    <string name="rng_default_max">10</string>
    <string name="rng_default_min">1</string>
    <string name="rng_max_textview">Max</string>
    <string name="rng_min_textview">Min</string>

    <string name="toggle_open">Open</string>
    <string name="toggle_close">Close</string>

    <string name="rsg_title">Number Set Generator</string>
    <string name="rsg_quantity_textview">Quantity</string>
    <string name="rsg_default_quantity">5</string>
    <string name="rsg_seperator_textview">Seperator</string>
    <string name="rsg_default_seperator">,</string>
    <string name="rsg_default_text">1\n2\n3\n4\n5</string>

    <string name="time_title">Random Time</string>
    <string name="time_default_min">00:00</string>
    <string name="time_default_max">23:59</string>
    <string name="time_mode_text">24-Hour</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_default_min">01/01/2000</string>
    <string name="date_default_max">01/01/2020</string>
    <string name="menu_item_date">Date</string>

</resources>
