<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.RNGFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:fillViewport="true"
        android:layout_weight="1">

        <TextView
            android:id="@+id/rsg_textview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textIsSelectable="true"
            android:text="1"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="54sp" />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rsg_min_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rng_min_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rsg_max_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/rng_default_max"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/rsg_max_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rng_max_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rsg_min_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/rng_default_min"
                    android:textAlignment="center"
                    android:textSize="30sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/rsg_quantity_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rsg_quantity_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rsg_quantity_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:text="@string/rsg_default_quantity"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/rsg_seperator_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/rsg_seperator_textview"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/rsg_seperator_edittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:text="@string/rsg_default_seperator"
                    android:textAlignment="center"
                    android:maxLength="10"
                    android:textSize="30sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/rsg_generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:text="@string/rng_generate" />

</LinearLayout>