<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.TimeFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/time_result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/time_default_min"
            android:textIsSelectable="true"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="72sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/time_min_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rng_min_textview"
            android:textSize="@dimen/secondary_text_size" />

        <EditText
            android:id="@+id/time_min_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/time_default_min"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/time_max_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rng_max_textview"
            android:textSize="@dimen/secondary_text_size" />

        <EditText
            android:id="@+id/time_max_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/time_default_max"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size"
            android:importantForAutofill="no"/>

        <TextView
            android:id="@+id/time_mode_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_mode_text"
            android:textSize="@dimen/secondary_text_size"
            android:visibility="visible"/>

        <CheckBox
            android:id="@+id/time_mode_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"/>


    </LinearLayout>

    <Button
        android:id="@+id/time_generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/primary_button_text_size"
        android:layout_margin="15dp"
        android:padding="@dimen/primary_button_padding"
        android:text="@string/rng_generate" />

</LinearLayout>