<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.RNGFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/rng_result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rng_default_max"
            android:textIsSelectable="true"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="72sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rng_min_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rng_min_textview"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/rng_min_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="10"
            android:inputType="number"
            android:text="@string/rng_default_min"
            android:textAlignment="center"
            android:textSize="30sp"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/rng_max_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rng_max_textview"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/rng_max_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@null"
            android:ems="10"
            android:inputType="number"
            android:text="@string/rng_default_max"
            android:textAlignment="center"
            android:textSize="30sp"
            android:importantForAutofill="no"/>

    </LinearLayout>

    <Button
        android:id="@+id/rng_generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/rng_generate" />

</LinearLayout>