<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.DateFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1">

        <TextView
            android:id="@+id/date_result_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date_default_min"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textIsSelectable="true"
            android:textSize="68sp" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date_min_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rng_min_textview"
            android:textSize="@dimen/secondary_text_size" />

        <EditText
            android:id="@+id/date_min_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:text="@string/date_default_min"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size" />

        <TextView
            android:id="@+id/date_max_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rng_max_textview"
            android:textSize="@dimen/secondary_text_size" />

        <EditText
            android:id="@+id/date_max_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="false"
            android:cursorVisible="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:importantForAutofill="no"
            android:text="@string/date_default_max"
            android:textAlignment="center"
            android:textSize="@dimen/input_text_size" />

    </LinearLayout>

    <Button
        android:id="@+id/date_generate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@color/white"
        android:padding="@dimen/primary_button_padding"
        android:text="@string/rng_generate"
        android:textSize="@dimen/primary_button_text_size" />

</LinearLayout>